Fixed User losing the ability to vote too soon. Modified user home on mobile.

--- a/Source/ZADV.ZLeaderboard/ZADV.ZLeaderboard.Web/Content/Site.css
+++ b/Source/ZADV.ZLeaderboard/ZADV.ZLeaderboard.Web/Content/Site.css
@@ -153,7 +153,7 @@ p {
 }*/
 
 
-@media(min-width: 566px) and (max-width: 767px) {
+@media(min-width: 480px) and (max-width: 767px) {
 
     .card {
         width: 50%;
